# autocheck-mcp

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: diagnostics.rs  lib.rs  main.rs  utils.rs
src/languages/: go.rs  javascript.rs  mod.rs  python.rs  rust.rs
