[package]
name = "autocheck-mcp"
version = "0.1.0"
edition = "2024"
description = "MCP server for editing Rust files with automatic cargo clippy --fix + cargo check after every write"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ozongzi/autocheck-mcp"
keywords = ["mcp", "rust", "cargo", "clippy", "developer-tools"]
categories = ["development-tools", "command-line-utilities"]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.tar.gz"
bin-dir = "{ bin }{ binary-ext }"

[dependencies]
ds-api = { version = "0.10", features = ["mcp-server"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
async-trait = "0.1"
similar = "2"
