[package]
name = "autocheck-mcp"
version = "0.1.0"
edition = "2024"
description = "MCP server for editing files with automatic check (Rust, Go, Python, JS/TS) after every write"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ozongzi/autocheck-mcp"
keywords = ["mcp", "rust", "go", "python", "javascript", "developer-tools"]
categories = ["development-tools", "command-line-utilities"]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.tar.gz"
bin-dir = "{ bin }{ binary-ext }"

[dependencies]
agentix = { path = "../agentix/agentix", features = ["mcp-server"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-stream = "0.3"
futures = "0.3"
async-trait = "0.1"
similar = "2"
regex = "1"
